nav menu finished

--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Pay</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="pay-wrapper">
-        <div class="pay">
-            <h4 class="pay__title"></h4>
-        </div>
+        <section class="pay">
+            <h4 class="pay__header">Пополнение счета</h4>
+            <h6 class="pay__title">Выберите тип платежа</h6>
+            <nav>
+            	<ul class="pay__type">
+            		<li class="pay__type-item"><button class="pay__button pay__button_privat24"></button></li>
+
+            		<li class="pay__type-item"><button class="pay__button pay__button_visa"></button></li>
+
+            		<li class="pay__type-item"><button class="pay__button pay__button_yandex"></button></li>
+
+            		<li class="pay__type-item"><button class="pay__button pay__button_sms"></button></li>
+
+
+            	</ul>
+            </nav>
+        </section>
     </div>
 </body>
 </html>
