--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,7 @@
 						<p class="pay__text">Со счета спишется также комиссия оператора в размере 6 грн.</p>
 				</div>
 				<div class="pay__footer">
-					<button class="pay__footer-btn">Оплатить</button>
+					<button class="pay__footer-btn" id="privat-paybtn">Оплатить</button>
 					<p class="pay__footer-text">После нажатия кнопки "Оплатить" вы будете перенаправлены на сайт money.ua</p>
 				</div>
 			</section>
@@ -93,6 +93,7 @@
 				$('#pay__privat24').hide();
 				$('#pay__sms').show();
 				$('.pay__footer-text').hide();
+				$('.pay__footer-btn').removeAttr('id', 'privat-paybtn')
 				$('.pay__footer-btn').attr('id', 'sms-paybtn')
 			});
 
@@ -100,7 +101,8 @@
 				$('#pay__sms').hide();
 				$('#pay__privat24').show();
 				$('.pay__footer-text').show();
-				
+				$('.pay__footer-btn').removeAttr('id', 'sms-paybtn');
+				$('.pay__footer-btn').attr('id', 'privat-paybtn');
 			});
 
 			//hide-show sms pay-list
